traefik/labs/k8s/default/cats-service-lb-with-typo.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: cats-lb
spec:
  type: LoadBalancer
  ports:
  - name: http
    targetPort: 80
    port: 80
  selector:
    app: cats
