traefik/labs/k8s/default/whoami-service-lb.yaml
---

apiVersion: v1
kind: Service
metadata:
  name: whoami

spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      name: web
      port: 80
  selector:
    app: whoami
