traefik/labs/k8s/default/cats-traefik-v2.0-http-ingressRoute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: cats
spec:
  entrypoints:
    - web
  routes:
  - match: Host(`lia.traefik-v2.do.rael.io`)
    kind: Rule
    services:
    - name: lia
      port: 80
  - match: Host(`blanca.traefik-v2.do.rael.io`)
    kind: Rule
    services:
    - name: blanca
      port: 80
  - match: Host(`liam.traefik-v2.do.rael.io`)
    kind: Rule
    services:
    - name: liam
      port: 80
  - match: Host(`lia.traefik-v2.do.rael.io`)
    kind: Rule
    services:
    - name: lia
      port: 80
  - match: Host(`neu.traefik-v2.do.rael.io`)
    kind: Rule
    services:
    - name: neu
      port: 80
  - match: Host(`gatet.traefik-v2.do.rael.io`)
    kind: Rule
    services:
    - name: gatet
      port: 80
  - match: Host(`any.traefik-v2.do.rael.io`)
    kind: Rule
    services:
    - name: cats-lb
      port: 80
