traefik/labs/k8s/default/whoami-ingress-annotations.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: whoami-web
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/auth-type: "basic"
    traefik.ingress.kubernetes.io/auth-secret: "super-secure-password"
spec:
  rules:
  - host: whoami.traefik.rael.io
    http:
      paths:
      - path: /
        backend:
          serviceName: whoami
          servicePort: web
